lesson questions added

--- a/prepare_exercises.ipynb
+++ b/prepare_exercises.ipynb
@@ -18,6 +18,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The end result of this exercise should be a file named prepare.py that defines the requested functions.\n",
+    "\n",
+    "In this exercise we will be defining some functions to prepare textual data. These functions should apply equally well to both the codeup blog articles and the news articles that were previously acquired."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Imports"
    ]
   },
@@ -25,19 +34,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (acquire.py, line 130)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[1;32m\"/usr/local/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3418\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-b2e08efae95d>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    import acquire\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/Users/lorisegovia/codeup-data-science/natural-language-processing-exercises/acquire.py\"\u001b[0;36m, line \u001b[0;32m130\u001b[0m\n\u001b[0;31m    return get_all_news_articles(categories):\u001b[0m\n\u001b[0m                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import unicodedata\n",
     "import re\n",
@@ -50,6 +47,80 @@
     "import pandas as pd\n",
     "\n",
     "import acquire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Define a function named basic_clean. It should take in a string and apply some basic text cleaning to it:\n",
+    "- Lowercase everything\n",
+    "- Normalize unicode characters\n",
+    "- Replace anything that is not a letter, number, whitespace or a single quote."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Define a function named tokenize. It should take in a string and tokenize all the words in the string."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Define a function named stem. It should accept some text and return the text after applying stemming to all the words."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Define a function named lemmatize. It should accept some text and return the text after applying lemmatization to each word."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Define a function named remove_stopwords. It should accept some text and return the text after removing all the stopwords.\n",
+    "- This function should define two optional parameters, extra_words and exclude_words. These parameters should define any additional stop words to include, and any words that we don't want to remove."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Use your data from the acquire to produce a dataframe of the news articles. Name the dataframe news_df."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Make another dataframe for the Codeup blog posts. Name the dataframe codeup_df."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. For each dataframe, produce the following columns:\n",
+    "- title to hold the title\n",
+    "- original to hold the original article/post content\n",
+    "- clean to hold the normalized and tokenized original with the stopwords removed.\n",
+    "- stemmed to hold the stemmed version of the cleaned data.\n",
+    "- lemmatized to hold the lemmatized version of the cleaned data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 9. If your corpus is 493KB, would you prefer to use stemmed or lemmatized text?\n",
+    "- If your corpus is 25MB, would you prefer to use stemmed or lemmatized text?\n",
+    "- If your corpus is 200TB of text and you're charged by the megabyte for your hosted computational resources, would you prefer to use stemmed or lemmatized text?"
    ]
   },
   {
