added first function

--- a/prepare_exercises.ipynb
+++ b/prepare_exercises.ipynb
@@ -46,7 +46,124 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "import acquire"
+    "import acquire as a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Acquire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lorisegovia/codeup-data-science/natural-language-processing-exercises/acquire.py:92: GuessedAtParserWarning: No parser was explicitly specified, so I'm using the best available HTML parser for this system (\"lxml\"). This usually isn't a problem, but if you run this code on another system, or in a different virtual environment, it may use a different parser and behave differently.\n",
+      "\n",
+      "The code that caused this warning is on line 92 of the file /Users/lorisegovia/codeup-data-science/natural-language-processing-exercises/acquire.py. To get rid of this warning, pass the additional argument 'features=\"lxml\"' to the BeautifulSoup constructor.\n",
+      "\n",
+      "  soup = BeautifulSoup(response.text)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>content</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Air India pilots demand vaccination on priorit...</td>\n",
+       "      <td>Indian Commercial Pilots Association (ICPA) on...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>India underestimated the coronavirus: Raghuram...</td>\n",
+       "      <td>Speaking about India's second COVID-19 wave, f...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>South Korea's richest woman gets fortune worth...</td>\n",
+       "      <td>South Korea’s richest woman Hong Ra-hee added ...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>World's biggest jeweller says it will no longe...</td>\n",
+       "      <td>Pandora, the world's biggest jeweller, has sai...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>India announced triumph over COVID-19 early: U...</td>\n",
+       "      <td>Confederation of Indian Industry (CII) Preside...</td>\n",
+       "      <td>business</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               title  \\\n",
+       "0  Air India pilots demand vaccination on priorit...   \n",
+       "1  India underestimated the coronavirus: Raghuram...   \n",
+       "2  South Korea's richest woman gets fortune worth...   \n",
+       "3  World's biggest jeweller says it will no longe...   \n",
+       "4  India announced triumph over COVID-19 early: U...   \n",
+       "\n",
+       "                                             content  category  \n",
+       "0  Indian Commercial Pilots Association (ICPA) on...  business  \n",
+       "1  Speaking about India's second COVID-19 wave, f...  business  \n",
+       "2  South Korea’s richest woman Hong Ra-hee added ...  business  \n",
+       "3  Pandora, the world's biggest jeweller, has sai...  business  \n",
+       "4  Confederation of Indian Industry (CII) Preside...  business  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "news_df = a.get_all_news_articles(a.categories)\n",
+    "news_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prep"
    ]
   },
   {
@@ -60,11 +177,152 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to clean\n",
+    "def basic_clean(text):\n",
+    "    \"\"\"\n",
+    "    This function takes in one argument (text) and will apply\n",
+    "    some basic text cleaning to it:\n",
+    "    1. lowercase everything\n",
+    "    2. normalize unicode characters\n",
+    "    3. replace anything that is not a letter, number, whitespace,\n",
+    "    or a single quote\n",
+    "    \"\"\"\n",
+    "    lowercase = text.lower()\n",
+    "    normalize = unicodedata.normalize('NFKD', lowercase)\\\n",
+    "    .encode('ascii', 'ignore')\\\n",
+    "    .decode('utf-8', 'ignore')\n",
+    "    remove_special = re.sub(r\"[^a-z0-9'\\s]\", '', normalize)\n",
+    "    \n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"South Korea’s richest woman Hong Ra-hee added another $7 billion (nearly ₹51,700 crore) worth of assets to her wealth. She received the amount in stocks after the transfer of her late husband and Samsung Group’s ex-Chairman Lee Kun-hee's assets. The 75-year-old inherited 83 million shares in Samsung Electronics, making her the largest individual shareholder in Samsung with a 2.3% stake.\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#grab some text to practice with\n",
+    "text = news_df.content[2]\n",
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"south korea’s richest woman hong ra-hee added another $7 billion (nearly ₹51,700 crore) worth of assets to her wealth. she received the amount in stocks after the transfer of her late husband and samsung group’s ex-chairman lee kun-hee's assets. the 75-year-old inherited 83 million shares in samsung electronics, making her the largest individual shareholder in samsung with a 2.3% stake.\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#lowercase the text\n",
+    "lowercase = text.lower()\n",
+    "lowercase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#normalize: Removing accented characters or non-ASCII characters\n",
+    "normalize = unicodedata.normalize('NFKD', lowercase)\\\n",
+    ".encode('ascii', 'ignore')\\\n",
+    ".decode('utf-8', 'ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"south koreas richest woman hong ra-hee added another $7 billion (nearly 51,700 crore) worth of assets to her wealth. she received the amount in stocks after the transfer of her late husband and samsung groups ex-chairman lee kun-hee's assets. the 75-year-old inherited 83 million shares in samsung electronics, making her the largest individual shareholder in samsung with a 2.3% stake.\""
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"south koreas richest woman hong rahee added another 7 billion nearly 51700 crore worth of assets to her wealth she received the amount in stocks after the transfer of her late husband and samsung groups exchairman lee kunhee's assets the 75yearold inherited 83 million shares in samsung electronics making her the largest individual shareholder in samsung with a 23 stake\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#remove special characters\n",
+    "remove_special = re.sub(r\"[^a-z0-9'\\s]\", '', normalize)\n",
+    "remove_special"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 2. Define a function named tokenize. It should take in a string and tokenize all the words in the string."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to tokenize\n",
+    "def tokenize(text):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -74,11 +332,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to stem\n",
+    "def stem(text):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 4. Define a function named lemmatize. It should accept some text and return the text after applying lemmatization to each word."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to lemmatize\n",
+    "def lemmatize(text):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -87,6 +381,24 @@
     "### 5. Define a function named remove_stopwords. It should accept some text and return the text after removing all the stopwords.\n",
     "- This function should define two optional parameters, extra_words and exclude_words. These parameters should define any additional stop words to include, and any words that we don't want to remove."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function to remove stop words\n",
+    "def remove_stopwords(text):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
