second function added

--- a/prepare_exercises.ipynb
+++ b/prepare_exercises.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,8 +197,31 @@
     "    .encode('ascii', 'ignore')\\\n",
     "    .decode('utf-8', 'ignore')\n",
     "    remove_special = re.sub(r\"[^a-z0-9'\\s]\", '', normalize)\n",
-    "    \n",
-    "    return text"
+    "    clean_text = remove_special\n",
+    "    return clean_text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"speaking about india's second covid19 wave former rbi governor raghuram rajan said i think what went wrong was simply thatwe underestimated the virus and its ability to adapt after the first wave there was a sense that we had endured the worstand we had come through and it was time to open up and that complacency hurt us he added\""
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#make sure function works\n",
+    "text = news_df.content[1]\n",
+    "clean = basic_clean(text)\n",
+    "clean"
    ]
   },
   {
@@ -308,21 +331,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "#function to tokenize\n",
     "def tokenize(text):\n",
+    "    \"\"\"\n",
+    "    This function will take in one argument(text) and will\n",
+    "    tokenize all words in the text.\n",
+    "    \"\"\"\n",
+    "    tokenizer = nltk.tokenize.ToktokTokenizer()\n",
+    "    tokens = tokenizer.tokenize(basic_clean(text))\n",
+    "    \n",
+    "    return tokens\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#create tokenizer\n",
+    "tokenizer = nltk.tokenize.ToktokTokenizer()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['speaking',\n",
+       " 'about',\n",
+       " 'india',\n",
+       " \"'\",\n",
+       " 's',\n",
+       " 'second',\n",
+       " 'covid19',\n",
+       " 'wave',\n",
+       " 'former',\n",
+       " 'rbi',\n",
+       " 'governor',\n",
+       " 'raghuram',\n",
+       " 'rajan',\n",
+       " 'said',\n",
+       " 'i',\n",
+       " 'think',\n",
+       " 'what',\n",
+       " 'went',\n",
+       " 'wrong',\n",
+       " 'was',\n",
+       " 'simply',\n",
+       " 'thatwe',\n",
+       " 'underestimated',\n",
+       " 'the',\n",
+       " 'virus',\n",
+       " 'and',\n",
+       " 'its',\n",
+       " 'ability',\n",
+       " 'to',\n",
+       " 'adapt',\n",
+       " 'after',\n",
+       " 'the',\n",
+       " 'first',\n",
+       " 'wave',\n",
+       " 'there',\n",
+       " 'was',\n",
+       " 'a',\n",
+       " 'sense',\n",
+       " 'that',\n",
+       " 'we',\n",
+       " 'had',\n",
+       " 'endured',\n",
+       " 'the',\n",
+       " 'worstand',\n",
+       " 'we',\n",
+       " 'had',\n",
+       " 'come',\n",
+       " 'through',\n",
+       " 'and',\n",
+       " 'it',\n",
+       " 'was',\n",
+       " 'time',\n",
+       " 'to',\n",
+       " 'open',\n",
+       " 'up',\n",
+       " 'and',\n",
+       " 'that',\n",
+       " 'complacency',\n",
+       " 'hurt',\n",
+       " 'us',\n",
+       " 'he',\n",
+       " 'added']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use the tokenizer\n",
+    "tokenizer.tokenize(clean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#tokens = tokenizer.tokenize(basic_clean(text))\n",
+    "#tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['indian',\n",
+       " 'commercial',\n",
+       " 'pilots',\n",
+       " 'association',\n",
+       " 'icpa',\n",
+       " 'on',\n",
+       " 'tuesday',\n",
+       " 'said',\n",
+       " 'if',\n",
+       " 'air',\n",
+       " 'india',\n",
+       " 'fails',\n",
+       " 'to',\n",
+       " 'set',\n",
+       " 'up',\n",
+       " 'vaccination',\n",
+       " 'camps',\n",
+       " 'on',\n",
+       " 'a',\n",
+       " 'panindia',\n",
+       " 'basis',\n",
+       " 'forflying',\n",
+       " 'crew',\n",
+       " 'above',\n",
+       " 'the',\n",
+       " 'age',\n",
+       " 'of',\n",
+       " '18',\n",
+       " 'years',\n",
+       " 'on',\n",
+       " 'priority',\n",
+       " 'we',\n",
+       " \"'\",\n",
+       " 'll',\n",
+       " 'stop',\n",
+       " 'work',\n",
+       " 'in',\n",
+       " 'a',\n",
+       " 'letter',\n",
+       " 'to',\n",
+       " 'the',\n",
+       " 'airline',\n",
+       " \"'\",\n",
+       " 's',\n",
+       " 'management',\n",
+       " 'icpa',\n",
+       " 'added',\n",
+       " 'with',\n",
+       " 'no',\n",
+       " 'healthcare',\n",
+       " 'supportno',\n",
+       " 'insurancewe',\n",
+       " \"'\",\n",
+       " 're',\n",
+       " 'in',\n",
+       " 'no',\n",
+       " 'position',\n",
+       " 'to',\n",
+       " 'continue',\n",
+       " 'risking',\n",
+       " 'lives',\n",
+       " 'of',\n",
+       " 'our',\n",
+       " 'pilots',\n",
+       " 'without',\n",
+       " 'vaccination']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#make sure function works\n",
+    "text = news_df.content[0]\n",
+    "tokenize(text)"
+   ]
   },
   {
    "cell_type": "markdown",
