--- a/acquire_news_articles.ipynb
+++ b/acquire_news_articles.ipynb
@@ -209,6 +209,17 @@
    "source": [
     "#category\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_inshort(article, category):\n",
+    "    # Attribute selector\n",
+    "    title = article.select(\"[]\")"
+   ]
   }
  ],
  "metadata": {
