lesson note complete

--- a/modeling_notes.ipynb
+++ b/modeling_notes.ipynb
@@ -211,18 +211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-5719cc07d569>, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-5719cc07d569>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    return \" \".join[wnl.lemmatize(word) for word in words if word not in stopwords]\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ADDITIONAL_STOPWORDS = ['r', 'u', '2', 'ltgt'] #ltgt is html artifact\n",
     "\n",
@@ -235,12 +226,12 @@
     "             .decode('utf-8', 'ignore')\n",
     "             .lower())\n",
     "    words = re.sub(r'[^\\w\\s]', '', text).split()\n",
-    "    return \" \".join[wnl.lemmatize(word) for word in words if word not in stopwords]"
+    "    return \" \".join([wnl.lemmatize(word) for word in words if word not in stopwords])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,9 +259,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>episode_name</th>\n",
+       "      <th>line</th>\n",
+       "      <th>character</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>43382</th>\n",
+       "      <td>Second Chances</td>\n",
+       "      <td>The transporters are considerably more effici...</td>\n",
+       "      <td>DATA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25169</th>\n",
+       "      <td>The Loss</td>\n",
+       "      <td>I look around me and all I see are surfaces w...</td>\n",
+       "      <td>TROI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5207</th>\n",
+       "      <td>Coming Of Age</td>\n",
+       "      <td>All right. \\nCaptain's log, stardate 41416.2....</td>\n",
+       "      <td>WESLEY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40494</th>\n",
+       "      <td>Ship in a Bottle</td>\n",
+       "      <td>My ship is in danger. It is imperative that I...</td>\n",
+       "      <td>PICARD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7290</th>\n",
+       "      <td>Conspiracy</td>\n",
+       "      <td>Three, sir. All gathered inside what appears ...</td>\n",
+       "      <td>DATA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           episode_name                                               line  \\\n",
+       "43382    Second Chances   The transporters are considerably more effici...   \n",
+       "25169          The Loss   I look around me and all I see are surfaces w...   \n",
+       "5207      Coming Of Age   All right. \\nCaptain's log, stardate 41416.2....   \n",
+       "40494  Ship in a Bottle   My ship is in danger. It is imperative that I...   \n",
+       "7290         Conspiracy   Three, sir. All gathered inside what appears ...   \n",
+       "\n",
+       "      character  \n",
+       "43382      DATA  \n",
+       "25169      TROI  \n",
+       "5207     WESLEY  \n",
+       "40494    PICARD  \n",
+       "7290       DATA  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train, validate, test = split(top_15, 'character')\n",
     "train.head()"
@@ -339,7 +412,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lm = LogisticRegression().fit(X_train_vectorized, y_train)"
+    "#sparse vectors/matrices have tons of zeros\n",
+    "#sparce matrix, an array with lots of 0\n",
+    "#to dense to see what it looks like\n",
+    "#every single word has a column, thats why there are so many zeros\n",
+    "X-train_vectorized.todense()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#something new but actually something old\n",
+    "#now that we have vectorized dataset, we can use our classificaiton tools\n",
+    "#remember we are trying to predict a discrete outcome\n",
+    "#had to turn our words into numbers\n",
+    "#want log regression bc we want a percentage\n",
+    "lm = LogisticRegression()\n",
+    "#fit the classification model on our vetorized train data\n",
+    ".fit(X_train_vectorized, y_train)"
    ]
   },
   {
@@ -359,6 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#use the trained model to predict y give those vectorized inputs of x\n",
     "train['predicted'] = lm.predict(X_train_vectorized)\n",
     "validate[\"predicted\"] = lm.predict(X_validate_vectorized)\n",
     "test['predicted'] = lm.predict(X_test_vectorized)"
@@ -380,6 +474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#out of sample accuracy\n",
     "(validate.actual == validate.predicted).mean()"
    ]
   },
@@ -389,6 +484,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#now that we have a trained model\n",
+    "#lets use our mode to predict the character of any give line\n",
+    "\n",
     "lines = pd.Series([\n",
     "    \"we have a responsibility\", \n",
     "    \"set phasers to stun\", \n",
@@ -396,6 +494,9 @@
     "    \"What does it mean to be human? I cannot calculate feelings\", \n",
     "    \"Romulan bird of prey decloaking off the port bow\"\n",
     "])\n",
+    "\n",
+    "#clean our inputs and lemmatize\n",
+    "lines = lines.apply(clean)\n",
     "X = tfidf.transform(lines)\n",
     "X"
    ]
@@ -414,7 +515,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wesley = train[train.actual == \"WESLEY\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#accuracy\n",
+    "(wesley.actual == wesley.predicted).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = train[train.actual == \"DATA\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(data.actual == data.predicted).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pull in classification report\n"
+   ]
   }
  ],
  "metadata": {
